# ai-lamp-lumi

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md
dlbackend/: .env.example  Dockerfile  Makefile  README.md  nginx.conf  pyproject.toml  start.sh
dlbackend/src/: config.py  factory.py  server.py
dlbackend/src/core/: models.py  types.py
dlbackend/src/core/action/: base.py  person_detector.py  uniformerv2.py  videomae.py  x3d.py
dlbackend/src/core/actionanalysis/: __init__.py  base.py  enums.py  uniformerv2.py  videomae.py  x3d.py
dlbackend/src/core/audio_recognition/: __init__.py  audio_preprocess.py  audio_recognizer.py  speaker_db.py
dlbackend/src/core/detectors/: __init__.py  base.py  grounding_dino.py  yolo_world.py
dlbackend/src/core/emotion/: __init__.py  emonet.py  emotion.py  posterv2.py  utils.py
dlbackend/src/core/emotionanalysis/: emotion.py
dlbackend/src/enums/: __init__.py  emotion_recognizer.py  person_detector.py
dlbackend/tests/: conftest.py  test_action_analysis_ws_api.py  test_action_analysis_ws_local.py  test_audio_recognizer_api.py  test_audio_recognizer_local.py  test_videomae_ws_local.py  test_x3d_ws_local.py
dlbackend/tests/action_api/: test_action_analysis_ws_api.py
dlbackend/tests/action_local/: settings.py  test_person_detector_local.py  test_uniformerv2_ws_local.py  test_videomae_ws_local.py  test_x3d_ws_local.py
dlbackend/tests/emotion_api/: test_emotion_ws_api.py
dlbackend/tests/emotion_local/: test_emotion_ws_local.py  test_posterv2_ws_local.py
dlbackend/tests/pose_api/: test_pose_estimation_api.py
dlbackend/tests/pose_local/: test_ergo_ws_local.py  test_rtmpose_tcpformer_local.py  test_rtmpose_ws_local.py  test_rula_local.py
dlbackend/tests/ser_api/: test_ser_api.py
dlbackend/tests/ser_local/: test_ser_local.py
dlbackend/tests/speaker_recognization_api/: test_audio_recognizer_api.py
dlbackend/tests/speaker_recognization_local/: test_audio_recognizer_local.py
docs/: dlbackend.md  (+40 more)
lelamp/: .env.example  UPSTREAM.md  app_state.py  config.py  generate_recordings.py  i18n.py  main.py  models.py  presets.py  pyproject.toml  requirements.txt  server.py  smooth_animation.py  speaker_recognizer.py
lelamp/devices/: video_capture_device.py
lelamp/follower/: lelamp_follower.py
lelamp/recordings/: acknowledge.csv  confused.csv  curious.csv  excited.csv  gen_animations.py  greeting.csv  happy_wiggle.csv  headshake.csv  idle.csv  laugh.csv  listening.csv  music_classical.csv  music_groove.csv  music_hiphop.csv  music_jazz.csv  music_rock.csv  music_waltz.csv  nod.csv  sad.csv  scanning.csv  shock.csv  shy.csv  sleepy.csv  stretching.csv  thinking_deep.csv  tracking_far.csv  wake_up.csv
lelamp/routes/: audio.py  bluetooth.py  camera.py  emotion.py  led.py  music.py  scene.py  sensing.py  servo.py  speaker.py  voice.py
lelamp/service/: audio_route.py  bluetooth_manager.py  button_actions.py  gelf_handler.py  gpio_button.py  ttp223.py
lelamp/service/display/: eyes.py
lelamp/service/motors/: animation_service.py
lelamp/service/rgb/: effects.py  rgb_service.py  rgb_service_pi5.py
lelamp/service/sensing/: __init__.py  presence_service.py  sensing_service.py
lelamp/service/tracking/: tracker_service.py
lelamp/service/voice/: backchannel.py  music_service.py  stt_autonomous.py  stt_deepgram.py  tts_backend.py  tts_elevenlabs.py  tts_service.py  voice_service.py
lelamp/test/: test_speaker_recognizer.py  test_speech_emotion_engine.py  test_speech_emotion_service.py
(+452 files in other folders)
