[project]
name = "lelamp-runtime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepgram-sdk>=6.0.0",
    "onnxruntime>=1.16.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "feetech-servo-sdk>=1.0.0",
    "lerobot>=0.3.3",
    "livekit-agents[openai]~=1.2",
    "livekit-plugins-noise-cancellation~=0.2",
    "numpy>=2.2.6",
    "pvporcupine>=3.0.5",
    "pvrecorder>=1.2.7",
    "pyarrow==20.0.0",
    "pyaudio>=0.2.14",
    "python-dotenv",
    "requests>=2.31.0",
    "sounddevice>=0.5.2",
    "yt-dlp>=2025.3.0",
    "Pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "insightface>=0.7.3",
]

[tool.uv.sources]
lerobot = { git = "https://github.com/huggingface/lerobot", rev = "55198de096f46a8e0447a8795129dd9ee84c088c" }

[project.optional-dependencies]
hardware = [
    "adafruit-circuitpython-neopixel",
    "adafruit-circuitpython-neopixel-spi",
    "lgpio",
    "rpi-ws281x",
]
